<resources>
    <string name="app_name">AdoptedStorageAccess</string>
    <string name="path">Path: %s</string>
    <string name="open">Open Folder</string>
    <string name="clipboard">Copy Path to Clipboard</string>
    <string name="size">Size: %s</string>
    <string name="copiedToClipboard">\'%s\' copied to clipboard.</string>
    <string name="settings">Settings</string>
    <string name="license">License</string>
    <string name="locationWarning">Warning: Application is not installed in adopted storage. You should install this application to the storage where you want to store your files.</string>
    <string name="openAppSettings">Move to Adopted Storage</string>
    <string name="enableActivityAttachment">OI File Manager mode</string>
    <string name="locationWarningEnabledTtitle">Warn if not run from adopted storage</string>
    <string name="locationWarningEnabledSummary">Display a warning message in red with a button that takes the user to the application settings if the application is not installed in the adopted storage to let them change the installation location.</string>
    <string name="enableIntentDataTitle">Set Intent Data</string>
    <string name="enableIntentDataSummary">Enable for ES File Explorer and OI File Manager</string>
    <string name="enableIntentTypeTitle">Set Intent Mime Type</string>
    <string name="enableIntentTypeSummary">Disable for OI File Manager</string>
    <string name="intentTypeTitle">Intent Mime Type</string>
    <string name="intentTypeSummary">See target applications\' intent filters</string>
</resources>