<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:key="locationWarningEnabled"
        android:persistent="true"
        android:summary="@string/locationWarningEnabledSummary"
        android:title="@string/locationWarningEnabledTtitle"></SwitchPreference>
    <SwitchPreference
        android:defaultValue="true"
        android:key="enableIntentData"
        android:summary="@string/enableIntentDataSummary"
        android:title="@string/enableIntentDataTitle"></SwitchPreference>
    <SwitchPreference
        android:defaultValue="true"
        android:key="enableIntentType"
        android:summary="@string/enableIntentTypeSummary"
        android:title="@string/enableIntentTypeTitle"></SwitchPreference>
    <EditTextPreference
        android:defaultValue="resource/folder"
        android:dependency="enableIntentType"
        android:key="intentType"
        android:singleLine="true"
        android:summary="@string/intentTypeSummary"
        android:title="@string/intentTypeTitle"></EditTextPreference>
</PreferenceScreen>